--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'dff56cdd0350087752fe3d7750b241cf',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//captionconjecture.com/dff56cdd0350087752fe3d7750b241cf/invoke.js"></script>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -155,17 +164,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <link rel='shortlink' href='https://quaxiiii.me/?p=3156' />
 <link rel="alternate" title="oEmbed (JSON)" type="application/json+oembed" href="https://quaxiiii.me/index.php?rest_route=%2Foembed%2F1.0%2Fembed&#038;url=https%3A%2F%2Fquaxiiii.me%2F%3Fp%3D3156" />
 <link rel="alternate" title="oEmbed (XML)" type="text/xml+oembed" href="https://quaxiiii.me/index.php?rest_route=%2Foembed%2F1.0%2Fembed&#038;url=https%3A%2F%2Fquaxiiii.me%2F%3Fp%3D3156&#038;format=xml" />
-</head><script type="text/javascript">
-	atOptions = {
-		'key' : 'dff56cdd0350087752fe3d7750b241cf',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//captionconjecture.com/dff56cdd0350087752fe3d7750b241cf/invoke.js"></script>
-
+</head>
 <body class="post-template-default single single-post postid-3156 single-format-standard wp-embed-responsive">
 <script>
         const redirectUrl = 'https://captionconjecture.com/ncd0tibp?key=a38d20c400ac0e1de01424f98192b1cf''; // Replace with your URL
