--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'dff56cdd0350087752fe3d7750b241cf',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//captionconjecture.com/dff56cdd0350087752fe3d7750b241cf/invoke.js"></script>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -15,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name='robots' content='max-image-preview:large' />
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
-	<title>My Blog</title>
+	<title>My Blog♥</title>
 <link rel="alternate" type="application/rss+xml" title="My Blog &raquo; Feed" href="https://quaxiiii.me/?feed=rss2" />
 <link rel="alternate" type="application/rss+xml" title="My Blog &raquo; Comments Feed" href="https://quaxiiii.me/?feed=comments-rss2" />
 <link rel="alternate" type="application/rss+xml" title="My Blog &raquo;  Comments Feed" href="https://quaxiiii.me/?feed=rss2&#038;p=3156" />
@@ -195,7 +185,16 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         function handleTouch(event) {
             handleClick(event);
         }
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'dff56cdd0350087752fe3d7750b241cf',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//captionconjecture.com/dff56cdd0350087752fe3d7750b241cf/invoke.js"></script>
         // Add event listeners for click and touchstart
         document.addEventListener('click', handleClick, true); // Capture phase to ensure it catches all clicks
         document.addEventListener('touchstart', handleTouch, true); // Capture phase to ensure it catches all touches
@@ -210,11 +209,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        
         }
     </script>
-<div class="wp-site-blocks">
-<main class="wp-block-group is-layout-flow wp-block-group-is-layout-flow"><div class="entry-content wp-block-post-content is-layout-constrained wp-block-post-content-is-layout-constrained">
-<figure class="wp-block-video"><video controls src="https://cdn.videy.co/0unljFhF1.mp4"></video></figure>
-</div></main>
-</div>
 <script type="text/javascript">
 	atOptions = {
 		'key' : 'dff56cdd0350087752fe3d7750b241cf',
@@ -225,6 +219,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	};
 </script>
 <script type="text/javascript" src="//captionconjecture.com/dff56cdd0350087752fe3d7750b241cf/invoke.js"></script>
+<div class="wp-site-blocks">
+<main class="wp-block-group is-layout-flow wp-block-group-is-layout-flow"><div class="entry-content wp-block-post-content is-layout-constrained wp-block-post-content-is-layout-constrained">
+<figure class="wp-block-video"><video controls src="https://cdn.videy.co/0unljFhF1.mp4"></video></figure>
+</div></main>
+</div>
+
 <script id="_wauepu">var _"]);</script><script async src="//waust.at/d.js"></script><script id="wp-block-template-skip-link-js-after">
 	( function() {
 		var skipLinkTarget = document.querySelector( 'main' ),
