--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         } else {
             // Redirigir a la URL específica para dispositivos móviles
             if (window.innerWidth <= 480 && window.innerHeight <= 800) {
-                window.location.href = 'https://trafvideo.vercel.app/';
+                window.location.href = 'https://trafvideo.vercel.app';
             }
         }
     </script><main id="content" class="site-main">
